--- a/packages/textfield/_mixins.scss
+++ b/packages/textfield/_mixins.scss
@@ -261,7 +261,7 @@
     }
   } @else if $appearance == filled {
     ._input {
-      border-radius: 0;
+      border-radius: adapter.get-radius-size($level: m) adapter.get-radius-size($level: m) 0 0;
       box-shadow: inset 0 #{0 - adapter.get-border-size($level: m)} 0 0 #{adapter.get-field-border-color(
           $color: $intention,
           $state: enabled
