--- a/packages/select/_mixins.scss
+++ b/packages/select/_mixins.scss
@@ -35,6 +35,11 @@
 
     @include -disabled-rule {
       cursor: not-allowed;
+      opacity: adapter.get-disabled-surface-opacity();
+
+      & + ._icon {
+        opacity: adapter.get-disabled-surface-opacity();
+      }
     }
   }
 
@@ -137,46 +142,11 @@
 
 @mixin -color-rule($intention: neutral) {
   ._select {
-    color: adapter.get-field-text-color(
-      $color: $intention,
-      $state: enabled
-    );
-    background-color: adapter.get-field-surface-color(
-      $color: $intention,
-      $state: enabled
-    );
-
-    @include -hover-rule {
-      background-color: adapter.get-field-surface-color(
-        $color: $intention,
-        $state: hover
-      );
-    }
-
-    @include -disabled-rule {
-      color: adapter.get-field-text-color(
-        $color: $intention,
-        $state: disabled
-      );
-      background-color: adapter.get-field-surface-color(
-        $color: $intention,
-        $state: disabled
-      );
-
-      & + ._icon {
-        background-color: adapter.get-field-text-color(
-          $color: $intention,
-          $state: disabled
-        );
-      }
-    }
+    color: adapter.get-text-color($brightness: light, $name: high_emphasis);
   }
 
   ._icon {
-    background-color: adapter.get-field-text-color(
-      $color: $intention,
-      $state: enabled
-    );
+    background-color: adapter.get-text-color($brightness: light, $name: high_emphasis);
   }
 }
 
@@ -226,13 +196,6 @@
                 )
             )};
       }
-
-      @include -disabled-rule {
-        box-shadow: inset 0 0 0 #{adapter.get-border-size($level: m)} #{adapter.get-field-border-color(
-            $color: $intention,
-            $state: disabled
-          )};
-      }
     }
   } @else if $appearance == filled {
     ._select {
@@ -245,10 +208,6 @@
 
       @include -focus-rule {
         box-shadow: inset 0 #{0 - adapter.get-border-size($level: m)} 0 0 #{adapter.get-field-border-color($color: $intention, $state: focused)}, #{adapter.get-focus-ring-box-shadow($color: adapter.get-field-border-color($color: $intention, $state: focused))};
-      }
-
-      @include -disabled-rule {
-        box-shadow: inset 0 #{0 - adapter.get-border-size($level: m)} 0 0 #{adapter.get-field-border-color($color: $intention, $state: disabled)};
       }
     }
   }
