--- a/packages/textfield/_mixins.scss
+++ b/packages/textfield/_mixins.scss
@@ -35,19 +35,27 @@
     @include -focus-rule {
       background-color: adapter.get-primitive-color($name: white) !important;
     }
-  }
 
-    &.-icon-before {
-      ._icon {
-        position: absolute;
-        top: 0;
-        bottom: 0;
-        display: inline-flex;
-        align-items: center;
-        justify-content: center;
-        pointer-events: none;
+    @include -disabled-rule {
+      opacity: adapter.get-disabled-surface-opacity();
+
+      & + ._icon {
+        opacity: adapter.get-disabled-surface-opacity();
       }
     }
+  }
+
+  &.-icon-before {
+    ._icon {
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+      pointer-events: none;
+    }
+  }
 
   textarea._input {
     resize: vertical;
@@ -147,46 +155,15 @@
 
 @mixin -color-rule($intention: neutral) {
   ._input {
-    color: adapter.get-field-text-color(
-      $color: $intention,
-      $state: enabled
-    );
-    background-color: adapter.get-field-surface-color(
-      $color: $intention,
-      $state: enabled
-    );
+    color: adapter.get-text-color($brightness: light, $name: high_emphasis);
 
-    @include -hover-rule {
-      background-color: adapter.get-field-surface-color(
-        $color: $intention,
-        $state: hover
-      );
-    }
-
-    @include -disabled-rule {
-      color: adapter.get-field-text-color(
-        $color: $intention,
-        $state: disabled
-      );
-      background-color: adapter.get-field-surface-color(
-        $color: $intention,
-        $state: disabled
-      );
+    &::placeholder {
+      color: adapter.get-text-color($brightness: light, $name: low_emphasis);
     }
   }
 
   ._icon {
-    color: adapter.get-field-text-color(
-      $color: $intention,
-      $state: enabled
-    );
-
-    @include -disabled-rule {
-      color: adapter.get-field-text-color(
-        $color: $intention,
-        $state: disabled
-      );
-    }
+    color: adapter.get-text-color($brightness: light, $name: high_emphasis);
   }
 }
 
@@ -251,13 +228,6 @@
                 )
             )};
       }
-
-      @include -disabled-rule {
-        box-shadow: inset 0 0 0 #{adapter.get-border-size($level: m)} #{adapter.get-field-border-color(
-            $color: $intention,
-            $state: disabled
-          )};
-      }
     }
   } @else if $appearance == filled {
     ._input {
@@ -286,13 +256,6 @@
                   $state: focused
                 )
             )};
-      }
-
-      @include -disabled-rule {
-        box-shadow: inset 0 #{0 - adapter.get-border-size($level: m)} 0 0 #{adapter.get-field-border-color(
-            $color: $intention,
-            $state: disabled
-          )};
       }
     }
   }
