--- a/packages/grid/_mixins.scss
+++ b/packages/grid/_mixins.scss
@@ -5,8 +5,8 @@
 @use "./variables";
 @use "./functions";
 
-@mixin row($options: variables.$default-options) {
-  $options: map.merge(variables.$default-options, $options);
+@mixin row($options: variables.$default-option) {
+  $options: map.merge(variables.$default-option, $options);
 
   display: flex;
   flex-wrap: wrap;
@@ -70,8 +70,8 @@
   }
 }
 
-@mixin col($options: variables.$default-options) {
-  $options: map.merge(variables.$default-options, $options);
+@mixin col($options: variables.$default-option) {
+  $options: map.merge(variables.$default-option, $options);
   flex-shrink: 0;
   box-sizing: border-box;
   width: 100%;
