--- a/packages/grid/_mixins.scss
+++ b/packages/grid/_mixins.scss
@@ -5,63 +5,26 @@
 @use "./variables";
 @use "./functions";
 
-@mixin row($options: variables.$default-option) {
-  $options: map.merge(variables.$default-option, $options);
-
+@mixin row($options: variables.$default-row-option) {
+  $options: map.merge(variables.$default-row-option, $options);
   display: grid;
   grid-template-columns: repeat(12, 1fr);
   gap: functions.compose-col-horizontal-gap(adapter-functions.get-boundary-size-first-key());
   box-sizing: border-box;
 
-  &.-align-items-start {
-    align-items: flex-start;
-  }
-
-  &.-align-items-center {
-    align-items: center;
-  }
-
-  &.-align-items-end {
-    align-items: flex-end;
-  }
-
-  &.-align-items-stretch {
-    align-items: stretch;
-  }
-
-  &.-justify-content-start {
-    justify-content: flex-start;
-  }
-
-  &.-justify-content-center {
-    justify-content: center;
-  }
-
-  &.-justify-content-end {
-    justify-content: flex-end;
-  }
-
-  &.-justify-content-around {
-    justify-content: space-around;
-  }
-
-  &.-justify-content-between {
-    justify-content: space-between;
+  @if map.get($options, direction) == ltr {
+    direction: ltr;
+  } @else if map.get($options, direction) == rtl {
+    direction: rtl;
   }
 
   &.-is-gapless {
-    margin: 0;
-    padding: 0;
-
-    > * {
-      margin: 0;
-      padding: 0;
-    }
+    gap: 0;
   }
 }
 
-@mixin col($options: variables.$default-option) {
-  $options: map.merge(variables.$default-option, $options);
+@mixin col($options: variables.$default-col-option) {
+  $options: map.merge(variables.$default-col-option, $options);
   box-sizing: border-box;
   width: 100%;
   max-width: 100%;
