--- a/packages/grid/_variables.scss
+++ b/packages/grid/_variables.scss
@@ -5,7 +5,7 @@ $total-col-count: 12;
 
 $default-row-option: (
   direction: ltr,
-  isGapless: false,
+  is-gapless: false,
   justify-content: start,
   align-content: start,
 );
