--- a/packages/grid/_mixins.scss
+++ b/packages/grid/_mixins.scss
@@ -114,11 +114,11 @@
 
   @for $i from 1 through variables.$total-col-count {
     &.-col-#{$i} {
-      @include -col($i);
+      @include -grid-column($i);
 
       @for $offset from 0 through (variables.$total-col-count - 1) {
         &.-offset-#{$offset} {
-          @include -col($i, $offset);
+          @include -grid-column($i, $offset);
         }
       }
     }
@@ -128,11 +128,11 @@
     @include adapter-mixins.mq-boundary(up, $boundary-size-level) {
       @for $i from 1 through variables.$total-col-count {
         &.-col-#{$boundary-size-level}-#{$i} {
-          @include -col($i);
+          @include -grid-column($i);
 
           @for $offset from 0 through (variables.$total-col-count - 1) {
             &.-offset-#{$boundary-size-level}-#{$offset} {
-              @include -col($i, $offset);
+              @include -grid-column($i, $offset);
             }
           }
         }
@@ -140,7 +140,7 @@
     }
   }
 
-  @include -col($count: map.get($options, count), $offset: map.get($options, offset));
+  @include -grid-column($count: map.get($options, count), $offset: map.get($options, offset));
 }
 
 @mixin export {
@@ -153,7 +153,7 @@
   }
 }
 
-@mixin -col($count, $offset: 0) {
+@mixin -grid-column($count, $offset: 0) {
   @if $offset != null and $offset > 0 {
     grid-column: ($offset + 1)  / span $count;
   } @else {
