--- a/packages/components-web/_index.scss
+++ b/packages/components-web/_index.scss
@@ -21,3 +21,4 @@
 @forward "@pepabo-inhouse/skeleton" as skeleton-*;
 @forward "@pepabo-inhouse/table" as table-*;
 @forward "@pepabo-inhouse/textfield" as textfield-*;
+@forward "@pepabo-inhouse/snackbar" as snackbar-*;
