Snackbarのtrailing要素のスタイリングを調整

--- a/packages/snackbar/_mixins.scss
+++ b/packages/snackbar/_mixins.scss
@@ -7,7 +7,6 @@
 
   display: flex;
   align-items: center;
-  justify-content: space-between;
   background-color: adapter.get-semantic-color(map-get($options, intention), map-get($options, background-color-level));
   color: map-get($options, text-color);
   font-size: adapter.get-font-size(map-get($options, size));
@@ -18,7 +17,6 @@
 
   &.-inline {
     display: inline-flex;
-    justify-content: flex-start;
   }
 
   &.-color-positive {
@@ -33,31 +31,14 @@
     @include -state-style(notice);
   }
 
-  ._group {
-    display: flex;
-    align-items: center;
-    gap: adapter.get-spacing-size(map-get($options, size));
-  }
-
-  ._button {
-    flex-shrink: 0;
-    font-family: inherit;
-    font-size: adapter.get-font-size(map-get($options, size));
-    font-weight: bold;
-    color: map-get($options, button-text-color);
-    border: none;
-    background-color: transparent;
-    cursor: pointer;
+  ._trailing {
+    margin-left: auto;
   }
 }
 
 @mixin -state-style($state) {
   background-color: adapter.get-semantic-color($state, 100);
   color: adapter.get-semantic-color($state, 800);
-
-  ._button {
-    color: inherit;
-  }
 }
 
 @mixin export {
