--- a/packages/snackbar/_variables.scss
+++ b/packages/snackbar/_variables.scss
@@ -1,9 +1,6 @@
 @use "@pepabo-inhouse/adapter/functions" as adapter;
 
 $default-options: (
-  intention: neutral,
-  background-color-level: 100,
-  text-color: adapter.get-text-color(light, high_emphasis),
+  color: neutral,
   size: m,
-  button-text-color: adapter.get-implication-color(interactive, 600)
 );
