テキストカラーの取得を変更

--- a/packages/snackbar/_mixins.scss
+++ b/packages/snackbar/_mixins.scss
@@ -8,7 +8,7 @@
   display: flex;
   align-items: center;
   background-color: adapter.get-semantic-color(map-get($options, color), 100);
-  color: map-get($options, adapter.get-semantic-color(map-get($options, color), 600));
+  color: adapter.get-semantic-color(map-get($options, color), 900);
   font-size: adapter.get-font-size(map-get($options, size));
   padding: adapter.get-spacing-size(map-get($options, size));
   gap: adapter.get-spacing-size(map-get($options, size));
