--- a/packages/snackbar/_mixins.scss
+++ b/packages/snackbar/_mixins.scss
@@ -12,7 +12,10 @@
   gap: adapter.get-spacing-size(map-get($options, size));
   border-radius: adapter.get-radius-size(map-get($options, size));
   box-shadow: adapter.get-elevation-box-shadow(1);
-
+  visibility: hidden;
+  opacity: 0;
+  translate: 0 10%;
+  transition: all 0.4s;
   @include -state-style(map-get($options, color));
 
   &.-color-positive {
@@ -30,6 +33,15 @@
   &.-inline {
     display: inline-flex;
   }
+
+  &:active,
+  &.--active {
+    visibility: visible;
+    opacity: 1;
+    translate: 0 0;
+    transition: all 0.4s;
+  }
+
 
   ._trailing {
     margin-left: auto;
