--- a/packages/components-web/_index.scss
+++ b/packages/components-web/_index.scss
@@ -2,6 +2,7 @@
 @forward "@pepabo-inhouse/app-bar" as app-bar-*;
 @forward "@pepabo-inhouse/avatar" as avatar-*;
 @forward "@pepabo-inhouse/button" as button-*;
+@forward "@pepabo-inhouse/card" as card-*;
 @forward "@pepabo-inhouse/cell" as cell-*;
 @forward "@pepabo-inhouse/checkbox" as checkbox-*;
 @forward "@pepabo-inhouse/container" as container-*;
