fix default variable

--- a/packages/card/_variables.scss
+++ b/packages/card/_variables.scss
@@ -4,7 +4,7 @@ $default-option: (
   appearance: filled,
   color: primary,
   gapless: false,
-  shape: rounded,
+  shape: circle,
 );
 
 $available-appearance: (
