アプリケーションのステータスを表示する目的として利用されるAlertを追加

--- a/packages/components-web/inhouse-components-web.scss
+++ b/packages/components-web/inhouse-components-web.scss
@@ -22,6 +22,7 @@
 @use "@pepabo-inhouse/table";
 @use "@pepabo-inhouse/textfield";
 @use "@pepabo-inhouse/snackbar";
+@use "@pepabo-inhouse/alert";
 
 // @import が存在しているので最初に flavor を読む
 // see: https://git.pepabo.com/inhouse/components-web/issues/355
@@ -47,3 +48,4 @@
 @include table.export;
 @include textfield.export;
 @include snackbar.export;
+@include alert.export;
