ついでにpackages/components-webのalertないとこを補完

--- a/packages/components-web/_index.scss
+++ b/packages/components-web/_index.scss
@@ -1,4 +1,5 @@
 @forward "@pepabo-inhouse/adapter";
+@forward "@pepabo-inhouse/alert" as alert-*;
 @forward "@pepabo-inhouse/app-bar" as app-bar-*;
 @forward "@pepabo-inhouse/avatar" as avatar-*;
 @forward "@pepabo-inhouse/button" as button-*;
