--- a/packages/components-web/_index.scss
+++ b/packages/components-web/_index.scss
@@ -1,8 +1,8 @@
 @forward "@pepabo-inhouse/adapter";
-@forward "@pepabo-inhouse/alert" as alert-*;
 @forward "@pepabo-inhouse/app-bar" as app-bar-*;
 @forward "@pepabo-inhouse/avatar" as avatar-*;
 @forward "@pepabo-inhouse/button" as button-*;
+@forward "@pepabo-inhouse/callout" as callout-*;
 @forward "@pepabo-inhouse/card" as card-*;
 @forward "@pepabo-inhouse/cell" as cell-*;
 @forward "@pepabo-inhouse/checkbox" as checkbox-*;
