--- a/packages/callout/_mixins.scss
+++ b/packages/callout/_mixins.scss
@@ -25,8 +25,13 @@
   ._title {
     margin-block: 0;
   }
+
   ._content > *:first-child {
-    margin-block: 0;
+    margin-block-start: 0;
+  }
+
+  ._content > *:last-child {
+    margin-block-end: 0;
   }
 
   @include -state-style(map-get($options, color));
