Adapterのcolor functions読み込みにButtonを含めない理由を記載

--- a/packages/adapter/functions/color/_index.scss
+++ b/packages/adapter/functions/color/_index.scss
@@ -6,3 +6,5 @@
 @forward "./semantic";
 @forward "./surface";
 @forward "./text";
+
+// note: ./buttonは追加しません。ボタンのスタイリングはget-button-surfaceを直接利用するのではなくget-button-surface-colorやget-button-text-colorなどを利用してください。
