--- a/packages/snackbar/_mixins.scss
+++ b/packages/snackbar/_mixins.scss
@@ -6,16 +6,17 @@
   $options: map.merge(variables.$default-options, $options);
 
   display: flex;
-  align-items: center;
-  font-size: adapter.get-font-size(map.get($options, size));
-  padding: adapter.get-spacing-size(map.get($options, size));
   gap: adapter.get-spacing-size(map.get($options, size));
+  align-items: center;
+  padding: adapter.get-spacing-size(map.get($options, size));
+  font-size: adapter.get-font-size(map.get($options, size));
   border-radius: adapter.get-radius-size(map.get($options, size));
   box-shadow: adapter.get-elevation-box-shadow(1);
   visibility: hidden;
-  opacity: 0;
-  translate: 0 10%;
+  opacity: 0%;
   transition: all 0.4s;
+  translate: 0 10%;
+
   @include -state-style(map.get($options, color));
 
   &.-color-positive {
@@ -37,11 +38,10 @@
   &:active,
   &.--active {
     visibility: visible;
-    opacity: 1;
+    opacity: 100%;
     translate: 0 0;
     transition: all 0.4s;
   }
-
 
   ._trailing {
     margin-left: auto;
@@ -49,8 +49,8 @@
 }
 
 @mixin -state-style($state) {
-  background-color: adapter.get-semantic-color($state, 100);
   color: adapter.get-semantic-color($state, 800);
+  background-color: adapter.get-semantic-color($state, 100);
 }
 
 @mixin export {
