--- a/packages/progress-indicator/_mixins.scss
+++ b/packages/progress-indicator/_mixins.scss
@@ -62,17 +62,18 @@
     left: adapter.get-spacing-size($level: xxs);
     display: block;
     box-sizing: border-box;
-    border-style: solid;
     border-color: adapter.get-progress-indicator-indicator-surface-color();
-    border-radius: 50%;
+    border-style: solid;
     border-width: adapter.get-progress-indicator-border-size($size: l);
+    border-radius: 50%;
     transform: rotate(45deg);
     transform-origin: center;
     transition: clip-path 0.1s ease;
     content: "";
     clip-path: polygon(0% 0%, 0% 100%, 100% 100%, 100% 0%, 0% 0%, 50% 50%);
   }
-  @each $size in 's', 'm', 'l' {
+
+  @each $size in "s", "m", "l" {
     &.-size-#{$size} {
       @include -size-style($size);
     }
