tab周りの依存の設定

--- a/packages/components-web/_index.scss
+++ b/packages/components-web/_index.scss
@@ -21,6 +21,7 @@
 @forward "@pepabo-inhouse/select" as select-*;
 @forward "@pepabo-inhouse/side-navigation" as side-navigation-*;
 @forward "@pepabo-inhouse/skeleton" as skeleton-*;
+@forward "@pepabo-inhouse/tab" as tab-*;
 @forward "@pepabo-inhouse/table" as table-*;
 @forward "@pepabo-inhouse/textfield" as textfield-*;
 @forward "@pepabo-inhouse/snackbar" as snackbar-*;
