breadcrumb周りの依存の設定

--- a/packages/components-web/_index.scss
+++ b/packages/components-web/_index.scss
@@ -1,6 +1,7 @@
 @forward "@pepabo-inhouse/adapter";
 @forward "@pepabo-inhouse/app-bar" as app-bar-*;
 @forward "@pepabo-inhouse/avatar" as avatar-*;
+@forward "@pepabo-inhouse/breadcrumb" as breadcrumb-*;
 @forward "@pepabo-inhouse/button" as button-*;
 @forward "@pepabo-inhouse/callout" as callout-*;
 @forward "@pepabo-inhouse/card" as card-*;
