--- a/packages/button/_functions.scss
+++ b/packages/button/_functions.scss
@@ -31,13 +31,8 @@
   }
 }
 
-@function get-border-radius($size: m, $shape: square) {
-  $available-sizes: adapter.get-interactive-component-height-keys();
+@function get-border-radius($shape: square) {
   $available-shapes: adapter.get-shapes();
-
-  @if list.index($available-sizes, $size) == null {
-    @error "$sizeには #{$available-size} のいずれかのみ指定できます";
-  }
 
   @if list.index($available-shapes, $shape) == null {
     @error "$shapeには #{$available-shapes} のいずれかのみ指定できます";
@@ -46,7 +41,7 @@
   @if $shape == square {
     @return adapter.get-button-radius-size();
   } @else if $shape == circle {
-    @return adapter.get-interactive-component-height($level: $size) * 0.5;
+    @return calc(infinity * 1px);
   }
 }
 
