重なった表現がわからなかったため、実際に重なるようにtopを追加

--- a/packages/stories-web/index.scss
+++ b/packages/stories-web/index.scss
@@ -22,6 +22,7 @@
 
 .major-stack-1 {
   position: absolute;
+  top: 0;
   z-index: adapter.get-major-stack-z-index($layer: 1);
   width: 100%;
   height: 100vh;
