--- a/packages/constants/_variables.scss
+++ b/packages/constants/_variables.scss
@@ -126,11 +126,13 @@ $cell-sizes: (
 
 $interactive-table-align-values: (
   start,
+  center,
   end
 ) !default;
 
 $table-align-values: (
   start,
+  center,
   end
 ) !default;
 
