正しくbuildできるように調整

--- a/packages/dialog/_mixins.scss
+++ b/packages/dialog/_mixins.scss
@@ -1,5 +1,5 @@
 @use "sass:map";
-@use "@pepabo-inhouse/adapter/functions" as adapter;
+@use "@pepabo-inhouse/adapter" as adapter;
 @use "./variables";
 
 // Dialog Modal Styles
