--- a/packages/components-web/inhouse-components-web.scss
+++ b/packages/components-web/inhouse-components-web.scss
@@ -7,6 +7,7 @@
 @use "@pepabo-inhouse/checkbox";
 @use "@pepabo-inhouse/container";
 @use "@pepabo-inhouse/description-list";
+@use "@pepabo-inhouse/dialog";
 @use "@pepabo-inhouse/flavor";
 @use "@pepabo-inhouse/grid";
 @use "@pepabo-inhouse/header";
@@ -39,6 +40,7 @@
 @include checkbox.export;
 @include container.export;
 @include description-list.export;
+@include dialog.export;
 @include grid.export;
 @include icon.export;
 @include interactive-list.export;
